--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
         <p><strong>Score :</strong> <span id="score">0</span></p>
         <p><strong>Combo :</strong> <span id="combo">0</span></p>
         <p><strong>Précision :</strong> <span id="accuracy">100%</span></p>
+        <p><strong>Mode :</strong> <span id="difficulty-label">Normale</span></p>
       </section>
-      <button id="start-button" type="button">▶️ Démarrer</button>
+      <div class="control-group">
+        <button id="start-button" type="button">▶️ Démarrer</button>
+        <div class="difficulty-picker">
+          <label for="difficulty">Difficulté :</label>
+          <select id="difficulty" name="difficulty">
+            <option value="easy">Facile</option>
+            <option value="normal" selected>Normale</option>
+            <option value="hard">Difficile</option>
+          </select>
+        </div>
+      </div>
       <div class="audio-picker">
         <label for="audio-file">🎵 Charger un MP3 :</label>
         <input
@@ -67,6 +78,7 @@
         <p id="result-score"></p>
         <p id="result-accuracy"></p>
         <p id="result-combo"></p>
+        <p id="result-difficulty"></p>
         <button id="restart-button" type="button">Rejouer</button>
       </article>
     </dialog>
